fix(BackButton): vertical align styles

--- a/packages/app/src/Element/BackButton.css
+++ b/packages/app/src/Element/BackButton.css
@@ -4,6 +4,8 @@
   color: var(--highlight);
   font-weight: 400;
   font-size: var(--font-size);
+  display: flex;
+  align-items: center;
 }
 
 .back-button svg {
